Add AdSense script and update contact wording

--- a/DotPhoto/contact.html
+++ b/DotPhoto/contact.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-adsense-account" content="ca-pub-8866012857426060" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8866012857426060" crossorigin="anonymous"></script>
   <title>문의하기 | Dot Photo Studio</title>
   <meta name="description" content="Dot Photo Studio 문의 채널" />
   <link rel="stylesheet" href="info-pages.css" />
@@ -28,11 +30,8 @@
         <h2>기본 문의 채널</h2>
         <ul>
           <li>이메일: <a class="link" href="mailto:bcm123412@gmail.com">bcm123412@gmail.com</a></li>
-          <li>응답 목표 시간: 영업일 기준 2~3일 이내</li>
+          <li>응답 예상 시간: 2~3일 이내</li>
         </ul>
-        <div class="notice">
-          실제 운영 전, 이메일 주소를 본인 소유 도메인/메일 주소로 변경하세요.
-        </div>
       </div>
 
       <div class="section">
