--- a/DotPhoto/sitemap.html
+++ b/DotPhoto/sitemap.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-adsense-account" content="ca-pub-8866012857426060" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8866012857426060" crossorigin="anonymous"></script>
   <title>사이트맵 | Dot Photo Studio</title>
   <meta name="description" content="Dot Photo Studio 사이트맵" />
   <link rel="stylesheet" href="info-pages.css" />
